# AI-Utils

./: .gitignore  .prospector.yaml  ISSUES.md  MANIFEST.in  README.md  arimo  metadata.json  pyproject.toml  requirements-setup.txt  requirements.txt  secure.sh  setup.cfg  setup.py
_bugs/: SparkDF-Order.py  SparkDF-UnpersistDownstreamDFs.py  SparkML-CanImportModel.py  SparkML-CannotImportModel.py  SparkML-SQLTrans-UncacheData.py  SparkSQL-OutOfMemory.py  _spark_ml_model_to_import.py
ai_utils/: __init__.py  namespace.py  s3.py
ai_utils/data_proc/: _abstract.py  pandas.py  s3_parquet.py
ai_utils/data_types/: arrow.py
arimo/: __init__.py  metadata.yml
arimo/blueprints/: __init__.py  base.py
arimo/data/: __init__.py  distributed.py  distributed_parquet.py  parquet.py
arimo/df/: __init__.py  dask.py  dask_from_files.py  from_files.py  spark.py  spark_from_files.py  spark_on_files.py
arimo/util/: __init__.py  cache.py  decor.py  dl.py  eval_metrics.py  fs.py  iterables.py  log.py
docs/: Makefile  build.sh  conf.py  index.md  parse-docstr.sh  publish.sh
experimental/: stack_ensemble.py
experimental/live_score/: JPMML_SparkML.py  MLeap.py
h1st/data/: distributed.py  distributed_parquet.py
h1st/util/: cache.py  date_time.py
h1st_util/: __init__.py  date_time.py  debug.py  default_dict.py  eval_metrics.py  fs.py  iter.py  iterables.py  log.py  namespace.py  pkl.py  s3.py
h1st_util/aws/: __init__.py  s3.py
h1st_util/data/: __init__.py  distributed.py  distributed_parquet.py  parquet.py
h1st_util/data_proc/: __init__.py  _abstract.py  distributed.py  distributed_parquet.py  pandas.py  parquet.py  s3_parquet.py
h1st_util/data_types/: arrow.py  c.py  numpy_pandas.py  python.py  spark_sql.py  typing.py
h1st_util/types/: python.py
h1st_util/util/: decor.py  eval_metrics.py  log.py  pkl.py
test/: ADF-benchmark-counting-n-sampling.py  data.py  test-ADF-S3DF-small-data.py  test-ADF-cache.py  test-ADF-load-big-ts-data.py  test-ADF-prep-sample-gen-big-ts-data.py  test-ADF-sample-big-ts-data.py  test-ADF-save-load.py  test-ADF-skewed-data.py  test-ADF-split.py  test-ADF-std-kwargs.py  test-ADF-to-TFR.py  test-ADF-ts-schemas.py  test-ADF-union.py  test-ADF-w-NaN-Null.py  test-AutoML.py  test-DFs.py  test-FileADF-prep-data.py  test-JobLib.py  test-Keras-fit-gen-from-FileADF-big-data.py  test-Keras-fit-gen-multi-proc.py  test-Keras-w-TF-backend.py  test-Namespace.py  test-Pandas-types.py  test-Spark-ComplexColSizes.py  test-Spark-ETL-big-data.py  test-Spark-read-write-big-data.py  test-Spark-worker-deps.py  test-eval-metrics.py
test/_ISSUES/: Arrow-DateTimes.py  ArrowParquetDataset-fromMultiS3PiecePaths.py  CuDNN-on-CPU.py  HDFS-to-S3-slow.py  SparkDF-Order.py  SparkDF-UnpersistDownstreamDFs.py  SparkSQL-read-multi-paths.py  test-Spark-ETL-big-data.py
test/_bugs/: SparkML-CanImportModel.py  (+1 more)
(+71 files in other folders)
