[tool.poetry]
name = 'H1st-Util'
version = '0.1.4.1'
description = 'H1st Utilities'
authors = ['Aitomatic, Inc. <Engineering@Aitomatic.com>']
license = 'Apache-2.0'
readme = 'README.md'
homepage = 'https://GitHub.com/H1st-AI/H1st-Util'
repository = 'https://GitHub.com/H1st-AI/H1st-Util'
packages = [
  {include = 'h1st_util'}
]


[tool.poetry.dependencies]
Python = '>= 3.8, < 3.10'

# Data Processing
NumPy = '*'
PyArrow = '^6.0.1'
PySpark = '^3.2.1'

# ML/DL
SciKit-Learn = '*'
TensorFlow = '^2.8.0'

# AWS deps: often conflict w/ other deps, so need separate installation
# AWSCLI = '*'
# Boto3 = '*'

# misc/other
'Ruamel.YAML' = '^0.17.17'
Tqdm = '*'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7',
]
build-backend = 'poetry.core.masonry.api'
