[tool.poetry]
name = 'AI-Utils'
version = '0.0.2'
description = 'H1st Utilities'
authors = ['Aitomatic, Inc. <Engineering@Aitomatic.com>']
license = 'Apache-2.0'
readme = 'README.md'
homepage = 'https://GitHub.com/Aitomatic/AI-Utils'
repository = 'https://GitHub.com/Aitomatic/AI-Utils'
packages = [
  {include = 'ai_utils'}
]


[tool.poetry.dependencies]
Python = '>= 3.8, < 3.10'

# Data Processing
NumPy = '*'
PyArrow = '^7.0.0'
PySpark = '^3.2.1'

# ML/DL
SciKit-Learn = '^1.0.2'
TensorFlow = '^2.8.0'

# AWS deps: often conflict w/ other deps, so need separate installation
# AWSCLI = '*'
# Boto3 = '*'

# misc/other
'Ruamel.YAML' = '^0.17.20'
Tqdm = '^4.62.3'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7',
]
build-backend = 'poetry.core.masonry.api'
