# STILL NEEDING SETUP.CFG FOR EDITABLE INSTALLATION
# =================================================
# Project has a 'pyproject.toml'
# and its build backend is missing the 'build_editable' hook.
# Since it does not have a 'setup.py' nor a 'setup.cfg',
# it cannot be installed in editable mode.
# Consider using a build backend that supports PEP 660.


[metadata]
name = H1st-Util
version = attr: h1st_util.__version__
